retrieveUnpackaged/objects/random_data_1__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>random_data_1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ID__c</columns>
        <columns>Name__c</columns>
        <columns>Email__c</columns>
        <columns>Age__c</columns>
        <columns>Country__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>random_data_1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>random_data_1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>